# xevo

./: README.md
dev/: CMakeLists.txt
dev/docs/: glm.txt
dev/src/: CMakeLists.txt
dev/src/core/: individual.cpp  individual.hpp  ponctual_individual.cpp  ponctual_individual.hpp  xevo.cpp  xevo.hpp
dev/src/utils/: utils.cpp  utils.hpp
dev/test/: CMakeLists.txt
dev/test/core/: test_individual.cpp  test_xevo.cpp
